Add commit info route, fix possible nil pointer
