# gen-go/server/router.go
@@ -144,6 +144,11 @@ func newRouter(c Controller) *mux.Router {
 		h.HealthCheckHandler(r.Context(), w, r)
 	})
 
+	router.Methods("GET").Path("/v1/commit").HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		logger.FromContext(r.Context()).AddContext("op", "getCommit")
+		h.GetCommitHandler(r.Context(), w, r)
+	})
+
 	router.Methods("PUT").Path("/v1/custom").HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		logger.FromContext(r.Context()).AddContext("op", "postCustom")
 		h.PostCustomHandler(r.Context(), w, r)
